fix : overflow tolto da body

--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,8 @@
 .box{
     height: 900px;
     width: 100%;
-    border: 2px solid white;
+    /* border: 2px solid white; */
+    background-color: teal;
     overflow-y: auto;
 }
 
@@ -10,6 +11,7 @@
     height: calc(100vh - 170px);
     background-color: orange;
     width: 100%;
+    overflow-y: auto;
 }
 
 footer.row{
@@ -39,4 +41,7 @@ footer.row{
     background-color: grey;
     border: 1px solid;
     width: 100%;
+}
+body{
+    overflow: hidden;
 }
